add images to content

--- a/src/content/school-and-work.mdx
+++ b/src/content/school-and-work.mdx
@@ -20,6 +20,10 @@ As a software developer, you're probably already familiar with the latest techno
 
 As I start a new semester, the first thing I do is transfer all my courses and lab hours to my calendar. It's usually helpful for me to group them under two separate headings: the important ones and the ones that can be easy to give up. I named both 'academic' in the calendar with different colors, but the difference is clear :).
 
+<img src="/images/calendar-1.png" alt="calendar"/>
+
+<img src="/images/calendar-2.png" alt="calendar 2"/>
+
 ### Communicate with your coworkers and professors
 It's important to communicate with your coworkers and professors about your schedule and workload. Let them know that you're juggling multiple responsibilities and ask for their understanding and support. If you're feeling overwhelmed, don't hesitate to ask for help.
 
