--- a/src/content/undergrad-project.mdx
+++ b/src/content/undergrad-project.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Enhancing Pharmaceutical Sales Predictions: A Journey with Boğaziçi University’s MIS Department'
+title: 'Enhancing Sales Predictions: A Journey with Boğaziçi University’s MIS Department'
 publishDate: '2024, 6, 7'
 ---
 
@@ -13,38 +13,39 @@ Our project was a collaborative effort, and I had the pleasure of working alongs
 
 The primary aim of our project was to create a robust forecasting model capable of predicting the sales volumes of specific Stock Keeping Units (SKUs) within the pharmaceutical sector. Our objective was to enhance the accuracy of these predictions on a weekly and monthly basis, leveraging advanced forecasting techniques including machine learning algorithms and traditional time series analysis methods. Accurate sales forecasting is pivotal for:
 
-**Better Inventory Management:** By predicting demand more accurately, we can minimize stockouts and reduce excess inventory, thereby optimizing storage and costs.
-Improved Supply Chain Operations: Reliable forecasts enable more efficient planning and resource allocation throughout the supply chain.
-Enhanced Decision-Making: Accurate data-driven insights support strategic decisions, ensuring that pharmaceutical products are available to meet the dynamic needs of healthcare organizations and end consumers.
+ - **Better Inventory Management:** By predicting demand more accurately, we can minimize stockouts and reduce excess inventory, thereby optimizing storage and costs.
+ - **Improved Supply Chain Operations**: Reliable forecasts enable more efficient planning and resource allocation throughout the supply chain.
+ - **Enhanced Decision-Making**: Accurate data-driven insights support strategic decisions, ensuring that pharmaceutical products are available to meet the dynamic needs of healthcare organizations and end consumers.
 
 ## The Scope: Comprehensive Data Analysis and Model Development
 
 Our project involved developing an advanced time series forecasting model using a rich dataset comprising six interconnected tables. This dataset included:
 
-**Sales Transactions:** Detailed records of sales from pharmaceutical warehouses to pharmacies.
-**Sales Campaigns:** Information on marketing initiatives by pharmaceutical companies.
-**Healthcare Organization Details:** Data on various healthcare providers.
-**SKU Information:** Detailed records of each stock-keeping unit.
-**Inventory Levels:** Insights into current stock levels of SKUs.
-**Sales Representative Visits:** Data on visits by medical sales representatives.
+ - **Sales Transactions:** Detailed records of sales from pharmaceutical warehouses to pharmacies.
+ - **Sales Campaigns:** Information on marketing initiatives by pharmaceutical companies.
+ - **Healthcare Organization Details:** Data on various healthcare providers.
+ - **SKU Information:** Detailed records of each stock-keeping unit.
+ - **Inventory Levels:** Insights into current stock levels of SKUs.
+ - **Sales Representative Visits:** Data on visits by medical sales representatives.
+
 We focused on data collection and preprocessing, exploratory data analysis, model development and evaluation, and integrating the forecasting model into existing business processes. This comprehensive approach aimed to generate accurate sales forecasts for pharmacies, pharmaceutical companies, and warehouses.
 
 ## Methodology: Advanced Forecasting Techniques
 
 To achieve our goal, we implemented a combination of machine learning algorithms and traditional time series analysis methods. Here’s an overview of our approach:
 
-**Data Preprocessing:** We cleaned and transformed the data to ensure it was suitable for modeling. This involved handling missing values, converting data types, and creating relevant features.
-**Exploratory Data Analysis:** We conducted thorough analyses to understand the data’s underlying patterns and relationships.
-**Model Development:** We developed and compared various forecasting models, including ARIMA, exponential smoothing, and machine learning techniques such as random forests and gradient boosting.
-**Model Evaluation:** The models were evaluated based on their accuracy in predicting sales volumes, using metrics such as Mean Absolute Error (MAE) and Root Mean Squared Error (RMSE).
-**Integration:** The final model was integrated into the business processes of the pharmaceutical sector, enabling real-time predictions and actionable insights.
+ - **Data Preprocessing:** We cleaned and transformed the data to ensure it was suitable for modeling. This involved handling missing values, converting data types, and creating relevant features.
+ - **Exploratory Data Analysis:** We conducted thorough analyses to understand the data’s underlying patterns and relationships.
+ - **Model Development:** We developed and compared various forecasting models, including ARIMA, exponential smoothing, and machine learning techniques such as random forests and gradient boosting.
+ - **Model Evaluation:** The models were evaluated based on their accuracy in predicting sales volumes, using metrics such as Mean Absolute Error (MAE) and Root Mean Squared Error (RMSE).
+ - **Integration:** The final model was integrated into the business processes of the pharmaceutical sector, enabling real-time predictions and actionable insights.
 
 ## Key Findings and Results
 ### Our project yielded several significant outcomes:
 
-**Improved Accuracy:** The advanced forecasting models significantly enhanced the precision of sales predictions, outperforming traditional methods.
-**Optimized Inventory Management:** With better forecasts, pharmaceutical companies could optimize their inventory levels, reducing both stockouts and excess inventory.
-**Informed Decision-Making:** The insights generated by our model supported strategic decision-making, helping companies respond more effectively to market demands.
+- **Improved Accuracy:** The advanced forecasting models significantly enhanced the precision of sales predictions, outperforming traditional methods.
+- **Optimized Inventory Management:** With better forecasts, pharmaceutical companies could optimize their inventory levels, reducing both stockouts and excess inventory.
+- **Informed Decision-Making:** The insights generated by our model supported strategic decision-making, helping companies respond more effectively to market demands.
 
 Working on this project with Ömer and Aleyna was an incredibly rewarding experience. Under the guidance of Prof. Dr. Aslı Sencer, we not only developed a powerful tool for the pharmaceutical industry but also gained invaluable insights into the complexities of demand forecasting and supply chain management.
 
@@ -54,5 +55,4 @@ Our journey at Boğaziçi University’s MIS department has been transformative.
 
 ### Final Report
 
-For those interested in diving deeper into our work, you can check out our detailed [summary](https://drive.google.com/file/d/1BH9EKvj_MhFMwq_bGST1i6U7bNrUj1gw/view?usp=share_link) and [final report](https://drive.google.com/file/d/1qKbeSE_RUc8YE3kbjgi2pXSckXmuP2rJ/view?usp=share_link) from links.
-
+For those interested in diving deeper into our work, you can check out our detailed **[summary](https://drive.google.com/file/d/1BH9EKvj_MhFMwq_bGST1i6U7bNrUj1gw/view?usp=share_link)** and **[final report](https://drive.google.com/file/d/1qKbeSE_RUc8YE3kbjgi2pXSckXmuP2rJ/view?usp=share_link)** from links.
