Refactor section on AI coding systems to improve clarity and formatting

--- a/src/content/code-llms.mdx
+++ b/src/content/code-llms.mdx
@@ -39,12 +39,7 @@ It’s about:
 
 Real-world engineering depends on all five.
 
-## From “Generate and Hope” to “Plan, Validate, Explain”
-
-The most reliable AI coding systems today don’t stop at generation.  
-They **validate** outputs with linters and test suites, **refine** code through iterative feedback, and **explain** reasoning behind design decisions.
-
-We’re witnessing a shift — from _“generate and hope”_ to _“plan, generate, validate, explain.”_
+The most reliable AI coding systems today don’t stop at generation.They **validate** outputs with linters and test suites, **refine** code through iterative feedback, and **explain** reasoning behind design decisions. We’re witnessing a shift — from _“generate and hope”_ to _“plan, generate, validate, explain.”_
 
 The next wave of developer tools will:
 
@@ -53,7 +48,7 @@ The next wave of developer tools will:
 - Integrate **domain-specific quality checks**
 - Offer **explanations** for implementation choices
 
-## The Future: Amplify, Don’t Replace
+### The Future: Amplify, Don’t Replace
 
 LLMs won’t replace developers who understand code quality.  
 They’ll **amplify** those who know what to accept, what to reject, and how to validate AI output.
